Problem with "npm run start"

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <div id="root"></div>
+
+
   <div class="header">
     <div class="header-menu">
       <div class="header-menu__left">
@@ -229,7 +232,7 @@
     </div>
     <div class="page" contenteditable="true"></div>
   </div>
-  <script src="bundle.js"></script>
+  <!-- <script src="bundle.js"></script> -->
 </body>
 
 </html>
